# flixparty

./: Cargo.toml  README.md  docker-compose.yml  flixparty.config.toml
.github/workflows/: relese.yaml
src/: clicker.rs  config.rs  main.rs  model.rs  periphery.rs
