[package]
name = "flixparty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
figment = { version = "0.10.19", features = ["toml"] }
rdev = "0.5.3"
enigo = { version = "0.2.1", default-features = false, features = ["x11rb"] }
redis = "0.27.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xid = "1.1.1"
